kustomize/argocd/overlays/nghz.net/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.nghz.net`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.nghz.net`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http-redirect
spec:
  entryPoints:
  - web
  routes:
    - kind: Rule
      match: Host(`argocd.nghz.net`)
      priority: 1
      middlewares:
        - name: redirect-https
      services:
        - name: minio
          port: 9001
          passHostHeader: true
          responseForwarding:
            flushInterval: 1ms
          scheme: http
